--- a/notex-ui/package.json
+++ b/notex-ui/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@reduxjs/toolkit": "^2.11.2",
+    "lodash": "^4.17.23",
     "quill": "^2.0.3",
+    "quill-delta": "^5.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0"
